# tinyrenderer

./: .clang-format  .gitignore  CMakeLists.txt
renderer/: CMakeLists.txt  main.cpp  objloader.cpp  objloader.h  rasterisation.cpp  rasterisation.h
test/: CMakeLists.txt  rasterisationTests.cpp  test.cpp
